The first vertion!

--- a/calibration/index.html
+++ b/calibration/index.html
@@ -164,6 +164,7 @@
   of the RGB image exposure. This library utilizes the methods
   described in Frequency Cam.
 </p>
+<div class="content-box">
 
 <h5>2024-07-15</h5>
 <ul>
@@ -194,7 +195,7 @@
     <strong>16-mm Lens Camera Pair</strong>: <a href="https://drive.google.com/file/d/137IznX7TMryi6aABN19VrUN3N-6MAG63/view?usp=drive_link">rawbag</a>, <a href="https://drive.google.com/file/d/122UToq2FEy0TpaGd-5MtdT9Hv5k0BMCh/view?usp=drive_link">results</a>
   </li> -->
 </ul>
-
+</div>
 <p><br></p>
 <h4>Extrinsic Calibration of Camera and IMU</h4>
 
@@ -206,37 +207,38 @@
   excited the sensor device along all IMU axes (both rotational
   and translational) to complete the external calibration.
 </p>
+<div class="content-box">
 
-<h5>2024-07-15</h5>
-<ul>
-  <li>
-  <strong>8-mm Lens RGB Camera with IMU</strong>: <a href="https://drive.google.com/file/d/1aryvo8vL_gs86uOOdK5A_w5drrSOw-uW/view?usp=drive_link">rawbag</a>, <a href="https://drive.google.com/file/d/1ohuL98XzGUiebZ79qa8mQGxqtfy-ubVh/view?usp=drive_link">results</a>
-  </li>
-  <li>
-    <strong>16-mm Lens RGB Camera with IMU</strong>: <a href="https://drive.google.com/file/d/1xGMhL_mAvzDk7gyK9DMAcAJ-dIQW4_yR/view?usp=drive_link">rawbag</a>, <a href="https://drive.google.com/file/d/1xcaIaikNDe7cuOirI9T_Q5sy_c4xi2-5/view?usp=drive_link">results</a>
-  </li>
-</ul>
+  <h5>2024-07-15</h5>
+  <ul>
+    <li>
+    <strong>8-mm Lens RGB Camera with IMU</strong>: <a href="https://drive.google.com/file/d/1aryvo8vL_gs86uOOdK5A_w5drrSOw-uW/view?usp=drive_link">rawbag</a>, <a href="https://drive.google.com/file/d/1ohuL98XzGUiebZ79qa8mQGxqtfy-ubVh/view?usp=drive_link">results</a>
+    </li>
+    <li>
+      <strong>16-mm Lens RGB Camera with IMU</strong>: <a href="https://drive.google.com/file/d/1xGMhL_mAvzDk7gyK9DMAcAJ-dIQW4_yR/view?usp=drive_link">rawbag</a>, <a href="https://drive.google.com/file/d/1xcaIaikNDe7cuOirI9T_Q5sy_c4xi2-5/view?usp=drive_link">results</a>
+    </li>
+  </ul>
 
-<h5>2024-08-08</h5>
-<ul>
-  <!-- <li>
-  <strong>8-mm Lens RGB Camera with IMU</strong>: <a href="https://drive.google.com/file/d/1aryvo8vL_gs86uOOdK5A_w5drrSOw-uW/view?usp=drive_link">rawbag</a>, <a href="https://drive.google.com/file/d/1ohuL98XzGUiebZ79qa8mQGxqtfy-ubVh/view?usp=drive_link">results</a>
-  </li>
-  <li>
-    <strong>16-mm Lens RGB Camera with IMU</strong>: <a href="https://drive.google.com/file/d/1xGMhL_mAvzDk7gyK9DMAcAJ-dIQW4_yR/view?usp=drive_link">rawbag</a>, <a href="https://drive.google.com/file/d/1xcaIaikNDe7cuOirI9T_Q5sy_c4xi2-5/view?usp=drive_link">results</a>
-  </li> -->
-</ul>
+  <h5>2024-08-08</h5>
+  <ul>
+    <!-- <li>
+    <strong>8-mm Lens RGB Camera with IMU</strong>: <a href="https://drive.google.com/file/d/1aryvo8vL_gs86uOOdK5A_w5drrSOw-uW/view?usp=drive_link">rawbag</a>, <a href="https://drive.google.com/file/d/1ohuL98XzGUiebZ79qa8mQGxqtfy-ubVh/view?usp=drive_link">results</a>
+    </li>
+    <li>
+      <strong>16-mm Lens RGB Camera with IMU</strong>: <a href="https://drive.google.com/file/d/1xGMhL_mAvzDk7gyK9DMAcAJ-dIQW4_yR/view?usp=drive_link">rawbag</a>, <a href="https://drive.google.com/file/d/1xcaIaikNDe7cuOirI9T_Q5sy_c4xi2-5/view?usp=drive_link">results</a>
+    </li> -->
+  </ul>
 
-<h5>2024-09-25</h5>
-<ul>
-  <!-- <li>
-  <strong>8-mm Lens RGB Camera with IMU</strong>: <a href="https://drive.google.com/file/d/1aryvo8vL_gs86uOOdK5A_w5drrSOw-uW/view?usp=drive_link">rawbag</a>, <a href="https://drive.google.com/file/d/1ohuL98XzGUiebZ79qa8mQGxqtfy-ubVh/view?usp=drive_link">results</a>
-  </li>
-  <li>
-    <strong>16-mm Lens RGB Camera with IMU</strong>: <a href="https://drive.google.com/file/d/1xGMhL_mAvzDk7gyK9DMAcAJ-dIQW4_yR/view?usp=drive_link">rawbag</a>, <a href="https://drive.google.com/file/d/1xcaIaikNDe7cuOirI9T_Q5sy_c4xi2-5/view?usp=drive_link">results</a>
-  </li> -->
-</ul>
-
+  <h5>2024-09-25</h5>
+  <ul>
+    <!-- <li>
+    <strong>8-mm Lens RGB Camera with IMU</strong>: <a href="https://drive.google.com/file/d/1aryvo8vL_gs86uOOdK5A_w5drrSOw-uW/view?usp=drive_link">rawbag</a>, <a href="https://drive.google.com/file/d/1ohuL98XzGUiebZ79qa8mQGxqtfy-ubVh/view?usp=drive_link">results</a>
+    </li>
+    <li>
+      <strong>16-mm Lens RGB Camera with IMU</strong>: <a href="https://drive.google.com/file/d/1xGMhL_mAvzDk7gyK9DMAcAJ-dIQW4_yR/view?usp=drive_link">rawbag</a>, <a href="https://drive.google.com/file/d/1xcaIaikNDe7cuOirI9T_Q5sy_c4xi2-5/view?usp=drive_link">results</a>
+    </li> -->
+  </ul>
+  </div>
 <p><br></p>
 <h4>Extrinsic Calibration of Cameras and LiDAR</h4>
 
@@ -252,50 +254,53 @@
   , maximizing the overlap between the projected
   point clouds and the images.
 </p>
+<div class="content-box">
+  <h5>2024-07-15</h5>
+  <ul>
+    <li>
+    <strong>8-mm Lens RGB Camera with IMU</strong>: <a href="https://drive.google.com/drive/folders/1rvq7Y7ELv1TcFzrjmf5C9HQ-gDKFN8gj?usp=drive_link">rawbag</a>, <a href="https://drive.google.com/file/d/1rFio_zRPNvLAMtaVCBmYBMoZghpXOwyq/view?usp=drive_link">results</a>
+    </li>
+    <li>
+      <strong>16-mm Lens RGB Camera with IMU</strong>: <a href="https://drive.google.com/drive/folders/1sFnTOGw3nyk2I-kVvYRDLmkZAVeZPbb3?usp=drive_link">rawbag</a>, <a href="https://drive.google.com/file/d/1HU1OZhHKXVVdCGbMLanPhOcHR6eKXH3h/view?usp=drive_link">results</a>
+    </li>
+  </ul>
 
-<h5>2024-07-15</h5>
-<ul>
-  <li>
-  <strong>8-mm Lens RGB Camera with IMU</strong>: <a href="https://drive.google.com/drive/folders/1rvq7Y7ELv1TcFzrjmf5C9HQ-gDKFN8gj?usp=drive_link">rawbag</a>, <a href="https://drive.google.com/file/d/1rFio_zRPNvLAMtaVCBmYBMoZghpXOwyq/view?usp=drive_link">results</a>
-  </li>
-  <li>
-    <strong>16-mm Lens RGB Camera with IMU</strong>: <a href="https://drive.google.com/drive/folders/1sFnTOGw3nyk2I-kVvYRDLmkZAVeZPbb3?usp=drive_link">rawbag</a>, <a href="https://drive.google.com/file/d/1HU1OZhHKXVVdCGbMLanPhOcHR6eKXH3h/view?usp=drive_link">results</a>
-  </li>
-</ul>
+  <h5>2024-08-08</h5>
+  <ul>
+    <!-- <li>
+    <strong>8-mm Lens RGB Camera with IMU</strong>: <a href="https://drive.google.com/drive/folders/1rvq7Y7ELv1TcFzrjmf5C9HQ-gDKFN8gj?usp=drive_link">rawbag</a>, <a href="https://drive.google.com/file/d/1rFio_zRPNvLAMtaVCBmYBMoZghpXOwyq/view?usp=drive_link">results</a>
+    </li>
+    <li>
+      <strong>16-mm Lens RGB Camera with IMU</strong>: <a href="https://drive.google.com/drive/folders/1sFnTOGw3nyk2I-kVvYRDLmkZAVeZPbb3?usp=drive_link">rawbag</a>, <a href="https://drive.google.com/file/d/1HU1OZhHKXVVdCGbMLanPhOcHR6eKXH3h/view?usp=drive_link">results</a>
+    </li> -->
+  </ul>
 
-<h5>2024-08-08</h5>
-<ul>
-  <!-- <li>
-  <strong>8-mm Lens RGB Camera with IMU</strong>: <a href="https://drive.google.com/drive/folders/1rvq7Y7ELv1TcFzrjmf5C9HQ-gDKFN8gj?usp=drive_link">rawbag</a>, <a href="https://drive.google.com/file/d/1rFio_zRPNvLAMtaVCBmYBMoZghpXOwyq/view?usp=drive_link">results</a>
-  </li>
-  <li>
-    <strong>16-mm Lens RGB Camera with IMU</strong>: <a href="https://drive.google.com/drive/folders/1sFnTOGw3nyk2I-kVvYRDLmkZAVeZPbb3?usp=drive_link">rawbag</a>, <a href="https://drive.google.com/file/d/1HU1OZhHKXVVdCGbMLanPhOcHR6eKXH3h/view?usp=drive_link">results</a>
-  </li> -->
-</ul>
-
-<h5>2024-09-25</h5>
-<ul>
-  <!-- <li>
-  <strong>8-mm Lens RGB Camera with IMU</strong>: <a href="https://drive.google.com/drive/folders/1rvq7Y7ELv1TcFzrjmf5C9HQ-gDKFN8gj?usp=drive_link">rawbag</a>, <a href="https://drive.google.com/file/d/1rFio_zRPNvLAMtaVCBmYBMoZghpXOwyq/view?usp=drive_link">results</a>
-  </li>
-  <li>
-    <strong>16-mm Lens RGB Camera with IMU</strong>: <a href="https://drive.google.com/drive/folders/1sFnTOGw3nyk2I-kVvYRDLmkZAVeZPbb3?usp=drive_link">rawbag</a>, <a href="https://drive.google.com/file/d/1HU1OZhHKXVVdCGbMLanPhOcHR6eKXH3h/view?usp=drive_link">results</a>
-  </li> -->
-</ul>
+  <h5>2024-09-25</h5>
+  <ul>
+    <!-- <li>
+    <strong>8-mm Lens RGB Camera with IMU</strong>: <a href="https://drive.google.com/drive/folders/1rvq7Y7ELv1TcFzrjmf5C9HQ-gDKFN8gj?usp=drive_link">rawbag</a>, <a href="https://drive.google.com/file/d/1rFio_zRPNvLAMtaVCBmYBMoZghpXOwyq/view?usp=drive_link">results</a>
+    </li>
+    <li>
+      <strong>16-mm Lens RGB Camera with IMU</strong>: <a href="https://drive.google.com/drive/folders/1sFnTOGw3nyk2I-kVvYRDLmkZAVeZPbb3?usp=drive_link">rawbag</a>, <a href="https://drive.google.com/file/d/1HU1OZhHKXVVdCGbMLanPhOcHR6eKXH3h/view?usp=drive_link">results</a>
+    </li> -->
+  </ul>
+</div>
 
 <p><br></p>
 <h4>Extrinsic Parameters Between GNSS/INS and LiDAR Systems</h4>
 
-<p>We
-  We derived their extrinsic parameters from the CAD installation dimensions.
-</p>
+  <p>
+    We derived their extrinsic parameters from the CAD installation dimensions.
+  </p>
 
+  <div class="content-box">
 
-<ul>
-  <li>
-  <strong>Extrinsic Parameters</strong>: <a href="https://drive.google.com/file/d/1XMuOoTHZ1j1xvfvoPZLj7WGFf2M5rIdZ/view?usp=drive_link">results</a>
-  </li>
-</ul>
+    <ul>
+      <li>
+      <strong>Extrinsic Parameters</strong>: <a href="https://drive.google.com/file/d/1XMuOoTHZ1j1xvfvoPZLj7WGFf2M5rIdZ/view?usp=drive_link">results</a>
+      </li>
+    </ul>
+  </div>
 </article>
 
     <!-- Footer -->    
