--- a/about/sensor/index.html
+++ b/about/sensor/index.html
@@ -104,7 +104,7 @@
               </li>
 
               <!-- Other pages -->
-                <li class="nav-item dropdown ">
+                <li class="nav-item dropdown active">
                   <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">About</a>
                   <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
                     <a class="dropdown-item" href="/EvTTC/about/sensor/">Sensor Suite</a>
