--- a/download/download/index.html
+++ b/download/download/index.html
@@ -117,7 +117,7 @@
                 <li class="nav-item ">
                   <a class="nav-link" href="/EvTTC/calibration/">Calibration</a>
                 </li>
-                <li class="nav-item dropdown ">
+                <li class="nav-item dropdown active">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Download</a>
                     <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
                     <a class="nav-link" href="/EvTTC/download/download/">Download</a>
