--- a/competition/index.html
+++ b/competition/index.html
@@ -237,6 +237,10 @@
           <li><strong> Slider-750:</strong> <a href="" target="_blank" rel="noopener noreferrer">rosbag (M)</a>   |  <a href="" target="_blank" rel="noopener noreferrer">bbox (M)</a>   |  <a href="" target="_blank" rel="noopener noreferrer">calibration (M)</a></li>
           <li><strong> Slider-1000:</strong> <a href="" target="_blank" rel="noopener noreferrer">rosbag (M)</a>   |  <a href="" target="_blank" rel="noopener noreferrer">bbox (M)</a>   |  <a href="" target="_blank" rel="noopener noreferrer">calibration (M)</a></li>
         </ul>
+        <p>
+          To submit the results of your method to the EvTTC leaderboard you must first <strong><a href="/EvTTC/submit/" rel="noopener noreferrer">apply for submission</a></strong>. Every application will be manually reviewed.
+          Furthermore, the results you submit must comply with this specific <strong><a href="/EvTTC/download/data_format/" rel="noopener noreferrer">data format</a></strong>.
+        </p>
       </article>
   <article>
       <p><br></p>
