--- a/submit/index.html
+++ b/submit/index.html
@@ -148,18 +148,22 @@
 <article>
 <!-- <p><br></p> -->
   <p>
-    We define the ground-truth TTC as the ratio of the
-  relative distance to the relative velocity along the z axis
-  in the coordinate system of the telephoto camera pair. All
-  subsequent data are transformed into the camera coordinate
-  system using the extrinsic parameters between the sensors.
+    If you apply for submission to EvTTC, we will manually review your application. Please send your application to this <strong><a href="mailto:kaizhen@hnu.edu.cn">email</a> (kaizhen@hnu.edu.cn)</strong>. Your application must follow the guidelines and include the following information:
   </p>
+
+<div class="info-box" > 
   <ul>
     <li>
-
+      Position (Undergrad, PhD, PostDoc, Researcher)
+    </li>
+    <li>
+      Conference/journal (including year) you plan to publish or have already published
+    </li>
+    <li>
+      Describe your research project in 3-5 sentences. Also, briefly specify the reason why you want to evaluate on the EvTTC test server.
     </li>
   </ul>
-
+</div>
 </article>
 
 
