--- a/submit/index.html
+++ b/submit/index.html
@@ -151,7 +151,7 @@
     If you apply for submission to EvTTC, we will manually review your application. Please send your application to this <strong><a href="mailto:kaizhen@hnu.edu.cn">email</a> (kaizhen@hnu.edu.cn)</strong>. Your application must follow the guidelines and include the following information:
   </p>
 
-<div class="info-box" > 
+<div class="info-box1" > 
   <ul>
     <li>
       Position (Undergrad, PhD, PostDoc, Researcher)
