--- a/competition/index.html
+++ b/competition/index.html
@@ -222,7 +222,7 @@
 
       <article>
         <p>
-          This TTC benchmark includes 10 sequences, covering three main types of scenes: CCRs, CCRm, and Slider. You can directly download these datasets and test them on your algorithm.
+          This TTC benchmark includes 10 sequences, covering three main types of scenes: CCRs, CCRm, and Slider. You can directly download these data to evaluate your algorithm.
         </p>
         <ul>
           <!-- Each list item is a link that will scroll to a specific section -->
