--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
 
           <!-- Selected papers -->
           <div class="publications">
-            <h2>Citation</h2>
+            <h2>BibTeX</h2>
             Please cite the following publication when using this benchmark in an academic context:
             <h2></h2>
             <ol class="bibliography"><li>
