--- a/submit/index.html
+++ b/submit/index.html
@@ -148,7 +148,7 @@
 <article>
 <!-- <p><br></p> -->
   <p>
-    If you apply for submission to EvTTC, we will manually review your application. Please send your application to this <strong><a href="mailto:kaizhen@hnu.edu.cn">email</a> (kaizhen@hnu.edu.cn)</strong>. Your application must follow the guidelines and include the following information:
+    If you apply for submission to EvTTC, we will manually review your application. Please send your application to this <strong><a href="mailto:kaizhen@hnu.edu.cn">email</a> <code>(kaizhen@hnu.edu.cn)</code></strong>. Your application must follow the guidelines and include the following information:
   </p>
 
 <div class="info-box1" > 
