--- a/competition/index.html
+++ b/competition/index.html
@@ -239,7 +239,7 @@
         </ul>
         <p>
           To submit the results of your method to the EvTTC leaderboard you must first <strong><a href="/EvTTC/submit/" rel="noopener noreferrer">apply for submission</a></strong>. Every application will be manually reviewed.
-          Furthermore, the results you submit must comply with this specific <strong><a href="/EvTTC/download/data_format/" rel="noopener noreferrer">data format</a></strong>.
+          Furthermore, the results you submit must comply with this specific <strong><a href="/EvTTC/download/data_format/#submit format" rel="noopener noreferrer">data format</a></strong>.
         </p>
       </article>
   <article>
